Fix bugs on Safari
- Add `border-radius: 0` to fix rounded inputs
- Disable non-standard double-tap to zoom

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+	touch-action: manipulation;
+}
+
 body {
 	overflow: hidden;
 }
@@ -28,6 +32,7 @@ body {
 
 .num-input {
 	border: 4px solid black;
+	border-radius: 0;
 	width: 100vw;
 	height: 60px;
 	max-width: 500px;
